# DPIReaper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KULLANIM.md  LICENSE  README-tr.md  README.md  SECURITY.md  SHA256SUMS.txt  change-icon.js  index.html  package-lock.json  package.json  plan.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
scripts/: build-proxy.cjs  build-proxy.js  build-proxy.ps1  build.ps1  copy-proxy.js  copy-proxy.ps1  dev.ps1  generate-app-icons.mjs  issue-license.cjs  license-keygen.cjs  prepare-logo.mjs
src/: App.css  App.jsx  License.jsx  Settings.jsx  bypassStats.js  constants.js  i18n.js  profiles.js
src-tauri/: Cargo.toml  hooks.nsi  installer.nsi  tauri.conf.json
src-tauri/assets/: setup_i18n.json  setup_page.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: isp_detect.rs  lib.rs  license.rs  license_pubkey.txt  main.rs  setup_page.rs  update_check.rs  windows_autostart.rs
src/components/: BypassGraph.jsx
src/locales/: ar.js  de.js  en.js  es.js  fr.js  it.js  ja.js  ko.js  pt.js  ru.js  tr.js  zh.js
src/overlays/: DefenderConsentModal.jsx  LanguagePicker.jsx  UpdateAvailableModal.jsx
src/settings/: ConnectionProfilePicker.jsx  SettingsAdvancedTab.jsx  SettingsAppTab.jsx  SettingsConnectionTab.jsx  SettingsGeneralTab.jsx  Toggle.jsx
src/utils/: checkUpdate.js
