[package]
name = "dpireaper"
version = "1.0.6"
description = "DPIReaper — local proxy and DPI bypass."
authors = ["DPIReaper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dpireaper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", default-features = false, features = ["tls", "json"] }
tauri-plugin-clipboard-manager = "2.3.2"

local-ip-address = "0.6.10"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# tauri-plugin-autostart removed — native windows_autostart.rs (Run + StartupApproved)

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wininet", "synchapi", "errhandlingapi", "winerror", "processthreadsapi", "securitybaseapi", "handleapi", "winnt", "winuser", "shellapi"] }
winreg = "0.52"

# ✅ Release optimizasyonları ekle
[profile.release]
opt-level = "z"      # Size optimize (s yerine z)
lto = true           # Link-time optimization
codegen-units = 1    # Tek thread compile (daha küçük binary)
strip = true         # Debug sembolleri kaldır
panic = "unwind"     # P0-FIX: Crash anında Cleanup (Drop trait) çalışabilmesi için unwind aktif edildi
